Apply Jib and build-health plugins