@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'org.springframework.boot' version "${spring_boot_version}"
+    id 'com.google.cloud.tools.jib' version '3.5.3'
 }
 
 group = 'me.mzalietin.mdbproject'
@@ -29,4 +30,33 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+dependencyAnalysis {
+    issues {
+        all {
+            onAny {
+                severity("fail")
+            }
+        }
+    }
+}
+
+jib {
+    from {
+        image = "gcr.io/distroless/java17-debian13"
+    }
+    to {
+        image = "mzalietin/mdb-aggregator:${version}"
+    }
+    container {
+        user = "nonroot"
+        ports = ["8080"]
+        jvmFlags = [
+            "-XX:+UseContainerSupport",
+            "-XX:MaxRAMPercentage=75",
+            "-XX:+UseZGC",
+            "-XX:+ExitOnOutOfMemoryError"
+        ]
+    }
 }
